# mcp-localai-data-gateway

./: LICENSE  README.md  pyproject.toml
github/workflows/: ci.yml
src/: main.py  server.py
src/services/: __init__.py  freshness.py  validator.py
src/tools/: __init__.py  data_scrubber.py  policy_matcher.py
src/utils/: logger.py
tests/: test_gateway.py
